# ksa_science

./: .gitignore  B3_1_Core_Knowledge.docx  C3_2_Core_Knowledge.docx  C4_2_Core_Knowledge.docx  C4_3_Core_Knowledge.docx  Multi_Core_Knowledge.docx  README.md  Run Daily Review app.bat  Run Daily Review app.command  anthropicsworksheet.py  app.py  create_pptx.py  daily_review_app.py  daily_review_words.py  pyproject.toml  read_excel.py  term.json  unified_education_system.py
Slides/: config.py  generate.py
readers/: __init__.py  aqa_reader.py  excel_reader.py  word_reader.py
readnow/: constants.py  logging_config.py  main.py  unified_generator.py
thinkOutLoud/: 6c. Think alouds Scripting Frame (1).docx  C4.1 Unit Preparation Booklet.docx  C4.2.4_lesson_plan_proforma.docx  C4_Lesson2_Ionic_Bonding_Think_Aloud_Example.docx  C4_Lesson5_Properties_of_Covalent_Substances_Think_Aloud.docx  C4_Lesson6_Diamond_Master_Teacher_Think_Aloud.docx  C4_Lesson6_Diamond_Think_Aloud.docx  C4_Lesson6_Diamond_Think_Aloud_Updated.docx  READ NOW - pressure and depth.docx  Think aloud- Balancing Equations.docx  Writing Half Equations.docx  best lesson profma.docx  c4_1_lesson_10_lesson_10_polymers_think_aloud.docx  c4_1_lesson_11_lesson_11_metallic_bonding_think_aloud.docx  c4_1_lesson_12_lesson_12_alloys_think_aloud.docx  c4_1_lesson_13_lesson_13_taking_it_further_alloys_think_aloud.docx  c4_1_lesson_14_lesson_14_bonding_review_think_aloud.docx  c4_1_lesson_15_lesson_15_evaluating_bonding_models_think_aloud.docx  c4_1_lesson_16_lesson_16_feedback_lesson_think_aloud.docx  c4_1_lesson_1_lesson_1_prior_knowledge_review_think_aloud.docx  c4_1_lesson_1_use_the_lesson_planning_guidance_to_develop_a_grasp_of_the_purpose_of_each_lesson_element_think_aloud.docx  c4_1_lesson_2_consider_key_timings_for_each_lesson._identify_which_lessons_may_need_to_be_adapted_to_account_for_the_length_of_your_lessons_or_ability_level_of_your_class_think_aloud.docx  fill_proforma.py  (+21 more)
(+564 files in other folders)
